--- a/metadata/manifest.json
+++ b/metadata/manifest.json
@@ -1,9 +1,10 @@
 ﻿{
     "name": "LTGCapacitor",
-    "version_number": "1.0.0",
+    "version_number": "1.0.1",
     "website_url": "https://github.com/JoshTClark/LTGCapacitor",
     "description": "Mod that adds the LTG \"Now\" sound effect every time royal capacitor is used.",
     "dependencies": [
-        "bbepis-BepInExPack-5.4.1801"
+        "bbepis-BepInExPack-5.4.1801",
+        "tristanmcpherson-R2API-3.0.71"
     ]
 }
